syntax = "proto3";

package pb;

option go_package = "movie-service/proto/pb";

service MovieService {
  rpc GetShowtime(GetShowtimeRequest) returns (GetShowtimeResponse);
  rpc GetShowtimes(GetShowtimesRequest) returns (GetShowtimesResponse);
  rpc GetSeatsWithPrice(GetSeatsWithPriceRequest) returns (GetSeatsWithPriceResponse);
  rpc GetSeatDetails(GetSeatDetailsRequest) returns (GetSeatDetailsResponse);
}

message GetShowtimeRequest {
  string id = 1;
}

message GetShowtimeResponse {
  bool success = 1;
  string message = 2;
  ShowtimeData data = 3;
}

message GetShowtimesRequest {
  repeated string ids = 1;
}

message GetShowtimesResponse {
  bool success = 1;
  string message = 2;
  repeated ShowtimeData data = 3;
}

message ShowtimeData {
  string id = 1;
  string movie_id = 2;
  string room_id = 3;
  string showtime_date = 4;
  string showtime_time = 5;
  string movie_title = 6;
  string room_number = 7;
  repeated string seat_numbers = 8;
  int64 duration_seconds = 9;
}

message GetSeatsWithPriceRequest {
  string showtime_id = 1;
  repeated string seat_ids = 2;
}

message GetSeatsWithPriceResponse {
  bool success = 1;
  string message = 2;
  repeated SeatPriceData data = 3;
  double total_amount = 4;
}

message SeatPriceData {
  string seat_id = 1;
  string seat_number = 2;
  string seat_type = 3;
  double price = 4;
  bool available = 5;
  string seat_row = 6;
}

message GetSeatDetailsRequest {
  repeated string seat_ids = 1;
}

message GetSeatDetailsResponse {
  bool success = 1;
  string message = 2;
  repeated SeatDetailData data = 3;
}

message SeatDetailData {
  string seat_id = 1;
  string seat_row = 2;
  int32 seat_number = 3;
  string seat_type = 4;
}
